@startuml

class Game {
  state: GameState
  region: string
  oppositionId: number
}

class Dungeon {
  name: string
}

class Fight {
  round: number
}

class Party {
}

class PartyRow {
}

class Opposition {
}

class OppositionRow {
}

class TurnOrder {
}

class Creature {
  factionType: FactionType
  type : CreatureType
  name : string
  lifeMax : number
  life : number
}

class StatusApplication {
  power: number
  remainingDuration: number
}

class StatusType {
  name: String
  improvement: boolean
  expirationType: StatusExpirationType
  cumulative: boolean
  tagTypes: StatusTypeTagType[]
}

class Character {
  level: number
  useMana: boolean
}

class Enemy {
  baseName: string
  actions: number
}

class StrategicEnemy {
}

class StrategicMeleeEnemy {
}

class EnemyStrategy {
}

class SingleSkillStrategy {
}

class WeightedSkillStrategy {
}

class SequentialSkillStrategy {
}

class Skill {
  type: SkillIconType
  name: string
  targetType: SkillTargetType
  cost: number
  range: number
  cooldownMax: number
  cooldown: number
  description: string
  powerLevels: number[]
  status: StatusType
  improvementStatus: boolean
}

Game *-left- "*" Dungeon
Game *-left- Dungeon
Game *-right- Fight
Game *-- Party
Dungeon *-- "*" Opposition
Fight -- Party
Fight -- Opposition
Fight *-- TurnOrder
Fight *-- Creature : "Active\ncreature"
Fight *-- "*" Creature : "Target\ncreatures"
TurnOrder o-- "*" Creature
Party *-- "*" PartyRow
PartyRow *-- "*" Character
Opposition *-- "*" OppositionRow
OppositionRow *-- "*" Enemy
Creature *-- "*" StatusApplication
StatusApplication -- StatusType
Creature <|-- Character
Character *-- "*" Skill
Creature <|-- Enemy
Enemy <|-right- StrategicEnemy
StrategicEnemy <|-left- StrategicMeleeEnemy
StrategicEnemy *-- EnemyStrategy
EnemyStrategy <|-- SingleSkillStrategy
SingleSkillStrategy *-right- Skill
EnemyStrategy <|-- WeightedSkillStrategy
EnemyStrategy <|-- SequentialSkillStrategy
WeightedSkillStrategy *-right- "*" Skill
SequentialSkillStrategy *-right- "*" Skill

@enduml
